--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ img {
 }
 
 h1{
-  color: black;
+  color: white;
      position: absolute;
      left: 50%;
      transform: translateX(-50%) translateY(-50%);
@@ -29,7 +29,7 @@ p{
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     text-align:center;
-    top: 5%;
+    top: 8%;
 }
 
 table{
